# geoip-splunk

./: .gitignore  .precious.toml  CHANGELOG.md  CLAUDE.md  README.dev.md  README.md  build.sh  globalConfig.json  mise.toml  pyproject.toml  test_maxmind_command.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  lint.yml  test.yml
demo_addon_for_splunk/: globalConfig.json
demo_addon_for_splunk/lib/splunklib/: results.py
demo_addon_for_splunk/lib/splunklib/modularinput/: script.py
demo_addon_for_splunk/package/: README.txt  app.manifest
demo_addon_for_splunk/package/default/: app.conf
demo_addon_for_splunk/package/lib/: requirements.txt
dev-bin/: release.sh
geoip/: additional_packaging.py  globalConfig.json
geoip/package/: README.md  app.manifest
geoip/package/LICENSES/: LICENSE.txt
geoip/package/README/: inputs.conf.spec
geoip/package/default/: app.conf  commands.conf  inputs.conf
geoip/package/default/data/ui/nav/: default.xml
geoip/package/lib/: exclude.txt  geoip_utils.py  requirements.txt
lib/splunklib/: binding.py  client.py
tests/: additional_packaging_test.py  conftest.py  geoip_command_test.py  geoip_handler_test.py  geoip_rh_settings_test.py  geoip_utils_test.py  geoipupdate_input_test.py  geoipupdate_script_test.py  maxmind_command_test.py
