[project]
name = "maxmind-splunk-add-on"
version = "1.0.0"
description = "MaxMind database lookups in Splunk"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pip>=26.0",
    "splunk-add-on-ucc-framework>=6.1.0",
]

[dependency-groups]
dev = [
    "maxminddb>=3.0.0",
    "pytest>=9.0.2",
]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "splunk-appinspect>=4.1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # COM812: Missing trailing comma - redundant as formatter handles this
    "COM812",
    # D203: One blank line before class docstring - conflicts with D211
    "D203",
    # D213: Multi-line summary on second line - conflicts with D212
    "D213",
    # INP001: Implicit namespace package - Splunk add-ons don't use __init__.py
    "INP001",
    # PTH100: os.path.abspath - pathlib not always better for simple cases
    "PTH100",
    # PTH118: os.path.join - pathlib not always better for simple cases
    "PTH118",
    # PTH120: os.path.dirname - pathlib not always better for simple cases
    "PTH120",
    # TD002: Missing author in TODO - not needed for this project
    "TD002",
    # TD003: Missing issue link in TODO - not needed for this project
    "TD003",
    # FIX002: Line contains TODO - TODOs are allowed
    "FIX002",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # ANN201: Missing return type on public function - not needed for tests
    "ANN201",
    # D: Docstrings - not needed for tests
    "D",
    # S101: Use of assert - expected in tests
    "S101",
    # SLF001: Private member access - needed to test private functions
    "SLF001",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["solnlib", "solnlib.*"]
ignore_missing_imports = true
