[project]
name = "maxmind-splunk-add-on"
version = "1.0.0"
description = "MaxMind database lookups in Splunk"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pip>=26.0",
    "splunk-add-on-ucc-framework>=6.1.0",
]

[dependency-groups]
dev = [
    "aiohttp>=3.8.0,<4.0.0",
    "filelock>=3.12.0,<4.0.0",
    "maxminddb>=3.0.0",
    "pytest>=9.0.2",
    "pytest-httpserver>=1.0.10",
    "tenacity>=8.2.0,<10.0.0",
]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "splunk-appinspect>=4.1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # COM812: Missing trailing comma - redundant as formatter handles this
    "COM812",
    # D203: One blank line before class docstring - conflicts with D211
    "D203",
    # D213: Multi-line summary on second line - conflicts with D212
    "D213",
    # INP001: Implicit namespace package - Splunk add-ons don't use __init__.py
    "INP001",
    # PTH100: os.path.abspath - pathlib not always better for simple cases
    "PTH100",
    # PTH118: os.path.join - pathlib not always better for simple cases
    "PTH118",
    # PTH120: os.path.dirname - pathlib not always better for simple cases
    "PTH120",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # ANN201: Missing return type on public function - not needed for tests
    "ANN201",
    # D: Docstrings - not needed for tests
    "D",
    # S101: Use of assert - expected in tests
    "S101",
    # SLF001: Private member access - needed to test private functions
    "SLF001",
]
"geoip/package/bin/geoip_handler.py" = [
    # BLE001: Blind exception catch is intentional - background thread safety net
    "BLE001",
    # N802, N803: camelCase method/arg names required by Splunk AdminExternalHandler API
    "N802",
    "N803",
    # PLC0415: Local imports are intentional to defer loading and avoid circular imports
    "PLC0415",
]
"geoip/package/bin/geoip_rh_settings.py" = [
    # F401: import_declare_test is required by UCC even though unused
    "F401",
    # N802, N803: camelCase method/arg names required by Splunk AdminExternalHandler API
    "N802",
    "N803",
]

[tool.mypy]
strict = true
mypy_path = "geoip/package/bin:geoip/package/lib"

[[tool.mypy.overrides]]
module = ["solnlib", "solnlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["splunktaucclib", "splunktaucclib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["geoipupdate", "geoipupdate.*"]
ignore_missing_imports = true
# geoipupdate is vendored; check types but suppress errors in vendored code
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["geoipupdate_input", "geoip_utils"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["geoip_handler"]
ignore_missing_imports = true
# Subclassing AdminExternalHandler (which has type "Any") causes misc errors
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["geoip_rh_settings", "import_declare_test"]
ignore_missing_imports = true
# Subclassing AdminExternalHandler (which has type "Any") causes misc errors
disable_error_code = ["misc"]
